--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -129,7 +129,7 @@ body {
 
     #page-content-wrapper {
         padding: 20px;
-        position: relative;
+        /* position: relative; */
         /*margin-top: 3.3rem;*/
     }
 
