--- a/src/app/compartido/components/footer/footer.component.html
+++ b/src/app/compartido/components/footer/footer.component.html
@@ -8,13 +8,13 @@
             <!-- row start -->
             <div class="row py-2">
               <div class="col-sm-3 hidden-md-down">
-                <a class="bg-circle bg-info" href="#">
-                  <i class="fa fa-2x fa-fw fa-address-card" aria-hidden="true"></i>
+                <a class="bg-circle bg-negro" href="javascript:;">
+                  <i class="fa fa-2x fa-fw fa-map-marker" aria-hidden="true"></i>
                 </a>
               </div>
               <div class="col-sm-9">
-                <h4>Contáctanos</h4>
-                <p>Queremos saber de ti</p>
+                <h4>Galápagos - Ecuador</h4>
+                <p>Av. 12 de febrero</p>
               </div>
             </div>
             <!-- row end -->
@@ -25,13 +25,13 @@
             <!-- row start -->
             <div class="row py-2">
               <div class="col-sm-3 hidden-md-down">
-                <a class="bg-circle bg-info" href="https://twitter.com/ ">
-                  <i class="fa fa-2x fa-fw fa-twitter" aria-hidden="true "></i>
+                <a class="bg-circle bg-negro" href="javascript:;">
+                  <i class="fa fa-2x fa-fw fa-phone" aria-hidden="true "></i>
                 </a>
               </div>
               <div class="col-sm-9">
-                <h4>Tweets</h4>
-                Embed here?
+                <h4></h4>
+                <h5>+593 990901765</h5>                
               </div>
             </div>
             <!-- row end -->
@@ -55,13 +55,13 @@
             <!-- row starting  -->
             <div class="row py-2">
               <div class="col-sm-3 hidden-md-down">
-                <a class="bg-circle bg-danger" href="# ">
-                  <i class="fa fa-2x fa-fw fa-file-pdf-o" aria-hidden="true"></i>
+                <a class="bg-circle bg-negro" href="javascript:; ">
+                  <i class="fa fa-2x fa-fw fa-envelope" aria-hidden="true"></i>
                 </a>
               </div>
               <div class="col-sm-9">
-                <h4>Download pdf</h4>
-                <p> You like print?</p>
+                <h4></h4>
+                <h5>thianlopezz@chaskiy.com</h5>
               </div>
             </div>
             <!-- row ended -->
@@ -87,22 +87,22 @@
       <div class="container">
         <div class="row py-3">
           <div class="col-md-9">
-            <p class="text-white">Cristhian E. López Zambrano</p>
+            <p class="text-white">Chaskiy© 2018 Todos los derechos reservados</p>
           </div>
           <div class="col-md-3">
             <div class="d-inline-block">
               <div class="bg-circle-outline d-inline-block">
-                <a href="https://www.facebook.com/thianlopezz" class="text-white">
+                <a target="_blank" href="https://www.facebook.com/thianlopezz" class="text-white">
                   <i class="fa fa-2x fa-fw fa-facebook"></i>
                 </a>
               </div>
               <div class="bg-circle-outline d-inline-block">
-                <a href="https://twitter.com/thianlopezz" class="text-white">
+                <a target="_blank" href="https://twitter.com/thianlopezz" class="text-white">
                   <i class="fa fa-2x fa-fw fa-twitter"></i>
                 </a>
               </div>
               <div class="bg-circle-outline d-inline-block">
-                <a href="https://www.linkedin.com/in/thianlopezz/" class="text-white">
+                <a target="_blank" href="https://www.linkedin.com/in/thianlopezz/" class="text-white">
                   <i class="fa fa-2x fa-fw fa-linkedin"></i>
                 </a>
               </div>
