--- a/src/app/publico/index/index.component.css
+++ b/src/app/publico/index/index.component.css
@@ -1,27 +1,41 @@
-/*// B L O Q U E  B I E N V E N I D O S*/
-.cuadro-img{
-    background: rgba(247, 247, 247, 0.44);
-	  background-size:cover;
-	  /*height: 70vh;
-    overflow: hidden;*/
+
+.cuadro-img .container{
+  margin-top: 10rem;
+}
+.features{
+  margin-left: 6rem;
+  margin-right: 6rem;
+}
+.clientes{  
+  background: #ffffff;
+}
+.row.clientes{  
+  margin-left: 4rem;
+  margin-right: 4rem;
 }
 
-/*.bienvenidos .container{
-  margin-top: 4.5rem;
-}*/
-
+/*// B L O Q U E  B I E N V E N I D O S*/
+.cuadro-img{
+    background: url("/assets/images/back_inicio.jpg")no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+	  height: 90vh;
+    /*overflow: hidden;*/
+}
 .cuadro-img .texto{
   margin-top: auto!important;
   margin-bottom: auto!important;
 }
 
 .cuadro-img p{
-  font-size: 2rem;
-  color: #565b63;
+  font-size: 1.7rem;
+  color: #ffffff;
 }
 
 .cuadro-img h1{
-  color: #38557b;
+  color: #ffffff;
 }
 
 .cuadro-img .img{
