--- a/src/app/publico/index/index.component.html
+++ b/src/app/publico/index/index.component.html
@@ -1,10 +1,11 @@
 <section class="cuadro-img">
+	<br>
 	<div class="container">
 		<br>
 		<div class="row">
 			<div class="col-md-8">
 				<div class="texto">
-					<h1>Organiza ya tus reservas</h1>
+					<h1>Organiza tus reservas</h1>
 					<p>Bienvenido a Chaskiy, tu sistema de reserva de hospedaje que se adapta a tu negocio.</p>
 				</div>
 			</div>
@@ -16,50 +17,67 @@
 	</div>
 </section>
 <section class="caracteristicas">
-	<div class="containter mt-2">
-		<div class="row">
-			<div class="col-md-4">
-				<p class="img">
-					<i class="fa fa-bed" aria-hidden="true"></i>
-				</p>
-				<h2>Registra tus habitaciones</h2>
-				<p>Registra tus habitaciones y controla la disponibilidad, llegadas, estancias y salidas de tus pasajeros sin perderte ningún detalle</p>
-				<!-- <a href="#" class="btn btn-secundary btn-lg">Mas información</a> -->
+	<br>
+	<div class="container-fluid">
+		<div class="containter">
+			<div class="row">
+				<h2 class="ml-auto mr-auto mt-3 text-muted">Mantén todo organizado</h2>
 			</div>
-			<div class="col-md-4">
-				<p class="img">
-					<i class="fa fa-paper-plane-o" aria-hidden="true"></i>
-				</p>
-				<h2>Correo electrónico</h2>
-				<p>Envia a través de Chaskiy proformas o confirmaciones de hospedaje a tus pasajeros para que no pierdan de vista sus reservas</p>
+			<div class="row">
+				<h4 class="ml-auto mr-auto mt-1 text-center">Deja de apuntar todo en tu agenda, y saca provecho de lo que te ofrecemos</h4>
 			</div>
-			<div class="col-md-4">
-				<p class="img">
-					<i class="fa fa-money" aria-hidden="true"></i>
-				</p>
-				<h2>Registra pagos</h2>
-				<p>Registra los pagos de cada reserva para el control de los ingresos monetarios que genera tu hospedaje</p>
-			</div>
-		</div>
-	</div>
-</section>
-<section class="cuadro-img">
-	<div class="container mt-2">
-		<br>
-		<div class="row">
-			<div class="col-md-4">
-				<p class="img">
-					<i class="fa fa-address-book" aria-hidden="true"></i>
-					<i class="fa fa-address-book-o" aria-hidden="true"></i>
-				</p>
-			</div>
-			<div class="col-md-8">
-				<div class="texto">
-					<h1>Regístrate!</h1>
-					<p>Y obtén un mes de prueba totalmente gratis!</p>
+			<div class="row features">
+				<div class="col-md-4 text-center">
+					<p class="img">
+						<i class="fa fa-bed" aria-hidden="true"></i>
+					</p>
+					<h2>Habitaciones</h2>
+					<p>Registra tus habitaciones y controla la disponibilidad, llegadas, estancias y salidas de tus pasajeros sin perderte
+						ningún detalle</p>
+					<!-- <a href="#" class="btn btn-secundary btn-lg">Mas información</a> -->
+				</div>
+				<div class="col-md-4 text-center">
+					<p class="img">
+						<i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+					</p>
+					<h2>Correo electrónico</h2>
+					<p>Envia a través de Chaskiy proformas o confirmaciones de hospedaje a tus pasajeros para que no pierdan de vista sus reservas</p>
+				</div>
+				<div class="col-md-4 text-center">
+					<p class="img">
+						<i class="fa fa-money" aria-hidden="true"></i>
+					</p>
+					<h2>Pagos</h2>
+					<p>Registra los pagos de cada reserva para el control de los ingresos monetarios que genera tu hospedaje</p>
 				</div>
 			</div>
 		</div>
-		<br>
+
 	</div>
+	<br>
+</section>
+<section class="clientes">
+	<br>
+	<div class="row">
+		<h3 class="ml-auto mr-auto text-muted">Conoce nuestros clientes</h3>
+	</div>
+	<div class="row clientes">
+		<div class="col-4 text-center">
+			<a target="_blank" href="https://www.casadcristhi.com/">
+				<img src="assets/images/casadcristhi.jpg" height="150px" width="150px">
+			</a>
+		</div>
+		<div class="col-4 text-center">
+			<a target="_blank" href="https://www.casadcristhi.com/">
+				<img src="assets/images/casadcristhi.jpg" height="150px" width="150px">
+			</a>
+		</div>
+		<div class="col-4 text-center">
+			<a target="_blank" href="https://www.casadcristhi.com/">
+				<img src="assets/images/casadcristhi.jpg" height="150px" width="150px">
+			</a>
+		</div>
+	</div>
+	<br>
+	<br>
 </section>
