--- a/src/app/publico/login/login.component.css
+++ b/src/app/publico/login/login.component.css
@@ -7,7 +7,7 @@
 }
 
 .login{
-    /*background: url("/assets/images/back_login.jpg")no-repeat center center fixed;*/
+    background: url("/assets/images/back_login.jpg")no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
