notificaciones landing registro login

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -146,6 +146,7 @@ body {
 .hamburger {
   position: fixed;
   top: 70px;
+  margin-left: 1rem!important;
   z-index: 999;
   display: block;
   width: 32px;
