--- a/src/app/compartido/components/footer/footer.component.html
+++ b/src/app/compartido/components/footer/footer.component.html
@@ -14,7 +14,7 @@
               </div>
               <div class="col-sm-9">
                 <h4>Galápagos - Ecuador</h4>
-                <p>Av. 12 de febrero</p>
+                <p>San Cristobal Av. 12 de febrero</p>
               </div>
             </div>
             <!-- row end -->
