--- a/src/app/privado/tarifa/tarifa.component.html
+++ b/src/app/privado/tarifa/tarifa.component.html
@@ -1,3 +1,6 @@
+<br>
+<br>
+<br>
 <div class="container">
   <h3 class="display-4">Tarifas</h3>
   <hr class="my-2">
@@ -68,14 +71,8 @@
         </div>
       </div>
 
-      <div class="card mt-2">
-        <div class="card-body">
-          <h4 class="card-title">Notificaciones</h4>
-          <!-- <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6> -->
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A eveniet unde ipsum, autem sunt, aperiam, quam harum
-            quibusdam consectetur, sed doloribus? Reprehenderit expedita quam aperiam recusandae, quasi. Ratione, illum,
-            aliquam!</p>
-        </div>
+      <div class="mt-2">
+        <app-card-notificaciones></app-card-notificaciones>
       </div>
 
     </div>
