--- a/src/app/publico/login/login.component.html
+++ b/src/app/publico/login/login.component.html
@@ -39,11 +39,11 @@
                         <div *ngIf="f.submitted && !password.valid" class="help-block">Contraseña es requerida</div>
                       </div>
                       <div class="form-group">
-                          <button type="submit" [disabled]="loading" class="btn btn-primary">Login</button>
+                          <button type="submit" [disabled]="loading" class="btn btn-primary">Iniciar Sesión</button>
                           <img *ngIf="loading" src="/assets/images/loading.svg" />
                       </div>
                       <div class="form-group">
-                        <p class="text-info">¿No recuerdas tu contraseña? da click  
+                        <p class="text-info">¿No recuerdas tu contraseña? Haz click  
                           <a [routerLink]="['/generico/']" [queryParams]="{op:'RP'}">aquí</a>
                         </p>
                       </div>
