todos los cambios enviados en correo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,9 @@
                 </span>
             </li>
             <li>
+                <a [routerLink]="['/pasajero']">Pasajeros</a>
+            </li>
+            <li>
                 <a [routerLink]="['/habitacion']">Habitaciones</a>
             </li>
             <li>
