--- a/src/app/compartido/generico/generico.component.html
+++ b/src/app/compartido/generico/generico.component.html
@@ -103,7 +103,7 @@
   <div *ngIf="showReserve" class="row">
     <div class="col-lg-3 col-md-2 col-sm-12">
       <div class="card" ><!-- style="width: 20rem;" -->
-        <img class="card-img-top" [src]="'https://correo-generico.herokuapp.com/logo_hospedaje'+ model.hospedaje.idHospedaje +'.png'" alt="Logo">
+        <img class="card-img-top" [src]="'https://correo-generico.herokuapp.com/logo_hospedaje'+ model.hospedaje.idhospedaje +'.png'" alt="Logo">
         <div class="card-body">
           <h4 class="card-title">{{model.hospedaje.hospedaje}}</h4>
           <div class="row">
