--- a/src/app/privado/habitacion/habitacion.component.html
+++ b/src/app/privado/habitacion/habitacion.component.html
@@ -15,7 +15,18 @@
 					<i class="fa fa-plus" aria-hidden="true"></i>
 				</button>
 			</h3>
-			<hr>
+			<div class="d-flex flex-row-reverse">
+				<div class="p-2">
+					<div class="input-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text">
+								<i class="fa fa-filter" aria-hidden="true"></i>
+							</span>
+						</div>
+						<input type="text" name="filtro" class="form-control" placeholder="Filtro" [(ngModel)]="filtro" />
+					</div>
+				</div>
+			</div>
 			<table class="table table-striped">
 				<thead>
 					<tr>
@@ -26,7 +37,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr *ngFor="let room of rooms">
+					<tr *ngFor="let room of rooms | filtrar:'nohabitacion,habitacion':filtro">
 						<td width="25%">{{room.nohabitacion}}</td>
 						<td width="60%">{{room.habitacion}}</td>
 						<!-- <td width="25%">{{room.tarifa | currency:'USD':true}}</td> -->
@@ -60,7 +71,8 @@
 				<div class="card-body">
 					<h4 class="card-title">Ayuda</h4>
 					<p class="card-text">
-						Registra, edita o elimina las habitaciones de tu hospedaje. Las habitaciones que registres se actualizarán en el calendario de reservas.
+						Registra, edita o elimina las habitaciones de tu hospedaje. Las habitaciones que registres se actualizarán en el calendario
+						de reservas.
 					</p>
 				</div>
 			</div>
