--- a/src/app/privado/reserva/reserva.component.html
+++ b/src/app/privado/reserva/reserva.component.html
@@ -89,19 +89,15 @@
       <div class="modal-content">
         <div class="modal-header">
           <h4 class="modal-title">Reserva &nbsp;
-            <small *ngIf="esModi && accion=='I'">
-              <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="proforma" [(ngModel)]="model.esProforma">
-                <label class="custom-control-label" for="proforma">Proforma</label>
-              </div>
-              <!-- <label class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" [(ngModel)]="model.esProforma">
-                <span class="custom-control-indicator"></span>
-                <span class="custom-control-description">Proforma</span>
-              </label> -->
-            </small>
+            <!-- <small *ngIf="esModi && accion=='I'">
+              
+            </small> -->
           </h4>
-          <font>{{'Estado: ' + getEstado()}}</font>
+          <div *ngIf="esModi && accion=='I'" class="custom-control custom-checkbox">
+            <input type="checkbox" class="custom-control-input" id="proforma" [(ngModel)]="model.esProforma">
+            <label class="custom-control-label" for="proforma">Proforma</label>
+          </div>          
+          <font *ngIf="accion!=='I'">{{'Estado: ' + getEstado()}}</font>
         </div>
         <form name="form" class="col-md-12" (ngSubmit)="f.form.valid && guardar(f)" #f="ngForm" [ngClass]="{ 'was-validated': f.submitted }"
           novalidate>
@@ -137,7 +133,7 @@
                             </div>
                             <div class="col-md-5">
                               <label for="tarifa">Tarifa</label>
-                              <select class="form-control" name="tarifa" [(ngModel)]="room.idtarifa" #tarifa="ngModel" (change)="changeTarifa(room)">
+                              <select class="form-control tarifa" [id]="'tarifa-' + room.idhabitacion" [name]="'tarifa-' + room.idhabitacion">
                                 <optgroup *ngFor="let tipo of tarifas" [label]="tipo.tipotarifa">
                                   <option *ngFor="let tarifa of tipo.tarifas" [value]="tarifa.idtarifa">{{tarifa.tarifa}}</option>
                                 </optgroup>
@@ -247,29 +243,35 @@
                 <div class="habitaciones">
                   <div class="row">
                     <div class="col-md-6">
-                      <div class="form-group">
-                        <label for="nopersonas">No. personas</label>
-                        <input type="number" class="form-control col-md-8" name="nopersonas" [(ngModel)]="model.nopersonas" #nopersonas="ngModel"
-                          required />
-                        <div *ngIf="f.submitted && !nopersonas.valid" class="invalid-feedback">El número de personas es requerido</div>
+                      <div class="form-group row">
+                        <label for="nopersonas" class="col-sm-4 col-form-label">No. personas</label>
+                        <div class="col-sm-6">
+                          <input type="number" class="form-control" name="nopersonas" [(ngModel)]="model.nopersonas" #nopersonas="ngModel"
+                            required />
+                            <div *ngIf="f.submitted && !nopersonas.valid" class="invalid-feedback">El número de personas es requerido</div>
+                        </div>                        
                       </div>
-                      <div class="form-group">
-                        <label for="aerolinea">Aerolínea</label>
-                        <select class="form-control col-md-8" name="aerolinea" [(ngModel)]="model.idaerolinea" #aerolinea="ngModel" required>
-                          <option *ngFor="let op of aerolineas" [value]="op.idaerolinea">{{op.aerolinea}}</option>
-                        </select>
-                        <div *ngIf="f.submitted && !aerolinea.valid" class="invalid-feedback">La aerolínea es requerida</div>
+                      <div class="form-group row">
+                        <label for="aerolinea" class="col-sm-4 col-form-label">Aerolínea</label>
+                        <div class="col-sm-6">
+                          <select class="form-control" name="aerolinea" [(ngModel)]="model.idaerolinea" #aerolinea="ngModel" required>
+                            <option *ngFor="let op of aerolineas" [value]="op.idaerolinea">{{op.aerolinea}}</option>
+                          </select>
+                          <div *ngIf="f.submitted && !aerolinea.valid" class="invalid-feedback">La aerolínea es requerida</div>
+                        </div>                        
                       </div>
-                      <div class="form-group">
-                        <label for="fuente">Captado de</label>
-                        <select class="form-control col-md-8" name="fuente" [(ngModel)]="model.idfuente" #fuente="ngModel" required>
-                          <option *ngFor="let op of fuentes" [value]="op.idfuente">{{op.fuente}}</option>
-                        </select>
-                        <div *ngIf="f.submitted && !fuente.valid" class="invalid-feedback">La fuente de captación es requerida</div>
+                      <div class="form-group row">
+                        <label for="fuente" class="col-sm-4 col-form-label">Captado de</label>
+                        <div class="col-sm-6">
+                          <select class="form-control" name="fuente" [(ngModel)]="model.idfuente" #fuente="ngModel" required>
+                            <option *ngFor="let op of fuentes" [value]="op.idfuente">{{op.fuente}}</option>
+                          </select>
+                          <div *ngIf="f.submitted && !fuente.valid" class="invalid-feedback">La fuente de captación es requerida</div>
+                        </div>
                       </div>
                       <div class="form-group">
                         <label for="notas">Notas</label>
-                        <textarea class="form-control" id="notas" name="notas" rows="2" [(ngModel)]="model.notas" #notas="ngModel" maxlength="600">{{model.notas}}</textarea>
+                        <textarea class="form-control" id="notas" name="notas" rows="5" [(ngModel)]="model.notas" #notas="ngModel" maxlength="600">{{model.notas}}</textarea>
                       </div>
                     </div>
                     <div class="col-md-6">
@@ -289,15 +291,15 @@
                         </div>
                       </div>
                       <div class="form-group">
-                        <label for="pasajero">Nombre</label>
+                        <label for="nombre">Nombre</label>
                         <div class="input-group">
-                          <input type="text" class="form-control col-md-12" name="pasajero" [(ngModel)]="model.pass.pasajero" #pasajero="ngModel" [readonly]="esPass && !editaPass_"
+                          <input type="text" class="form-control col-md-12" name="nombre" [(ngModel)]="model.pass.nombre" #nombre="ngModel" [readonly]="esPass && !editaPass_"
                             maxlength="100" required />
                           <span class="input-group-btn">
-                            <button *ngIf="esPass && !editaPass_ && accion=='I'" class="btn btn-outline-danger" type="button" (click)="editaPass()">
+                            <button *ngIf="esPass && !editaPass_ && accion" class="btn btn-outline-danger" type="button" (click)="editaPass()">
                               <i class="fa fa-pencil" aria-hidden="true"></i>
                             </button>
-                            <button *ngIf="esPass && editaPass_" class="btn btn-outline-primary" type="button" (click)="correo.valid && pasajero.valid && noContacto.valid && goEditaPass()">
+                            <button *ngIf="esPass && editaPass_" class="btn btn-outline-primary" type="button" (click)="correo.valid && nombre.valid && nocontacto.valid && goEditaPass()">
                               <i class="fa fa-check" aria-hidden="true"></i>
                             </button>
                             <button *ngIf="esPass && editaPass_" class="btn btn-outline-danger" type="button" (click)="cancelEditaPass()">
@@ -308,22 +310,25 @@
                             <i class="fa fa-check-circle-o fa-lg" style="color: #28a745;" aria-hidden="true"></i>
                           </span>
                         </div>
-                        <div *ngIf="(f.submitted && !pasajero.valid)" class="invalid-feedback">El nombre es requerido</div>
-                        <div *ngIf="!f.submitted && !pasajero.valid && pasajero.touched">
+                        <div *ngIf="f.submitted && !nombre.valid" class="invalid-feedback">El nombre es requerido</div>
+                        <div *ngIf="!f.submitted && !nombre.valid && nombre.touched">
                           <p class="text-danger">El nombre es requerido</p>
                         </div>
                       </div>
-                      <div class="form-group">
-                        <label for="pais">Pais</label>
-                        <select id="pais" name="pais" style="width: 100%" [disabled]="esPass && !editaPass_">
-                          <option *ngFor="let pais of paises" [value]="pais.id">{{pais.text}}</option>
-                        </select>
-                        <!-- <select2 [data]="paises" [value]="valuePa" (valueChanged)="changedPa($event)" name="pais" width="100%" [disabled]="esPass && !editaPass_"></select2> -->
+                      <div class="form-group row">
+                        <label for="pais" class="col-sm-4 col-form-label">País</label>
+                        <div class="col-sm-8">
+                          <select id="pais" name="pais" style="width: 100%" [disabled]="esPass && !editaPass_">
+                            <option *ngFor="let pais of paises" [value]="pais.id">{{pais.text}}</option>
+                          </select>
+                        </div>
                       </div>
-                      <div class="form-group">
-                        <label for="nocontacto">Número de contacto</label>
-                        <input type="text" class="form-control col-md-8" name="nocontacto" [(ngModel)]="model.pass.nocontacto" #nocontacto="ngModel"
-                          [readonly]="esPass && !editaPass_" maxlength="15" />
+                      <div class="form-group row">
+                        <label for="nocontacto" class="col-sm-4 col-form-label">No. contacto</label>
+                        <div class="col-sm-8">
+                          <input type="text" class="form-control" name="nocontacto" [(ngModel)]="model.pass.nocontacto" #nocontacto="ngModel"
+                            [readonly]="esPass && !editaPass_" maxlength="15" />
+                        </div>
                       </div>
                     </div>
                   </div>
