--- a/src/app/privado/pasajero/pasajero.component.html
+++ b/src/app/privado/pasajero/pasajero.component.html
@@ -106,7 +106,7 @@
         </div>
         <div class="form-group">
           <label for="nombre">Nombre</label>
-          <input type="text" class="form-control col-md-8" name="nombre" [(ngModel)]="model.nombre" #pasajero="ngModel" maxlength="100"
+          <input type="text" class="form-control col-md-8" name="nombre" [(ngModel)]="model.nombre" #nombre="ngModel" maxlength="100"
             required />
           <div *ngIf="f.submitted && !nombre.valid" class="invalid-feedback">El nombre es requerido</div>
         </div>
