solucion pasajero no graba nombre

--- a/src/app/privado/reserva/reserva.component.html
+++ b/src/app/privado/reserva/reserva.component.html
@@ -293,13 +293,13 @@
                       <div class="form-group">
                         <label for="nombre">Nombre</label>
                         <div class="input-group">
-                          <input type="text" class="form-control col-md-12" name="nombre" [(ngModel)]="model.pass.nombre" #nombre="ngModel" [readonly]="esPass && !editaPass_"
+                          <input type="text" class="form-control col-md-12" name="pasajero" [(ngModel)]="model.pass.pasajero" #pasajero="ngModel" [readonly]="esPass && !editaPass_"
                             maxlength="100" required />
                           <span class="input-group-btn">
                             <button *ngIf="esPass && !editaPass_ && accion" class="btn btn-outline-danger" type="button" (click)="editaPass()">
                               <i class="fa fa-pencil" aria-hidden="true"></i>
                             </button>
-                            <button *ngIf="esPass && editaPass_" class="btn btn-outline-primary" type="button" (click)="correo.valid && nombre.valid && nocontacto.valid && goEditaPass()">
+                            <button *ngIf="esPass && editaPass_" class="btn btn-outline-primary" type="button" (click)="correo.valid && pasajero.valid && nocontacto.valid && goEditaPass()">
                               <i class="fa fa-check" aria-hidden="true"></i>
                             </button>
                             <button *ngIf="esPass && editaPass_" class="btn btn-outline-danger" type="button" (click)="cancelEditaPass()">
@@ -310,8 +310,8 @@
                             <i class="fa fa-check-circle-o fa-lg" style="color: #28a745;" aria-hidden="true"></i>
                           </span>
                         </div>
-                        <div *ngIf="f.submitted && !nombre.valid" class="invalid-feedback">El nombre es requerido</div>
-                        <div *ngIf="!f.submitted && !nombre.valid && nombre.touched">
+                        <div *ngIf="f.submitted && !pasajero.valid" class="invalid-feedback">El nombre es requerido</div>
+                        <div *ngIf="!f.submitted && !pasajero.valid && pasajero.touched">
                           <p class="text-danger">El nombre es requerido</p>
                         </div>
                       </div>
