--- a/src/app/privado/pasajero/pasajero.component.html
+++ b/src/app/privado/pasajero/pasajero.component.html
@@ -105,10 +105,10 @@
           <div *ngIf="f.submitted && !correo.valid" class="invalid-feedback">Ingrese un electrónico válido</div>
         </div>
         <div class="form-group">
-          <label for="nombre">Nombre</label>
-          <input type="text" class="form-control col-md-8" name="nombre" [(ngModel)]="model.nombre" #nombre="ngModel" maxlength="100"
+          <label for="pasajero">Nombre</label>
+          <input type="text" class="form-control col-md-8" name="pasajero" [(ngModel)]="model.pasajero" #pasajero="ngModel" maxlength="100"
             required />
-          <div *ngIf="f.submitted && !nombre.valid" class="invalid-feedback">El nombre es requerido</div>
+          <div *ngIf="f.submitted && !pasajero.valid" class="invalid-feedback">El nombre es requerido</div>
         </div>
         <div class="form-group">
           <label for="pais">País</label>
